--- a/htdocs/themes/reflex/content.css
+++ b/htdocs/themes/reflex/content.css
@@ -78,11 +78,12 @@ div .errorMsg a:hover {color: #000;}
 #buttonbar a:hover {color: #000; background: #dcdee0;}
 #buttonbar a:hover span {}
 
-#groupform .icms_checkboxoption {width: 48.9%; float: left; padding: 2px;}
-#groupform .icms_checkboxoption:hover {background: #f1f2f3;}
-#groupform .icms_checkboxoption input[type=checkbox] {float: left; outline: none; background: transparent; border: 0;}
-#groupform .icms_checkboxoption label {float: left; overflow: hidden; vertical-align: middle;}
-#groupform .icms_checkboxoption label a {float: left; overflow: hidden;}
+#groupform .icms_checkboxoption {width: 48.9%; padding: 2px;}
+.icms_checkboxoption {float: left;}
+.icms_checkboxoption:hover {background: #f1f2f3;}
+.icms_checkboxoption input[type=checkbox] {float: left; outline: none; background: transparent; border: 0;}
+.icms_checkboxoption label {float: left; overflow: hidden; vertical-align: middle;}
+.icms_checkboxoption label a {float: left; overflow: hidden;}
 #groupform .even b {clear: both; margin: 5px 0px; float: left; width: 99%; background: #dcdee0; padding: 3px; border-bottom: 1px solid #ccc;}
 
 /*image manager*/
